force-app/main/default/objects/Portal_Email__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Message_Text__c</fullName>
        <label>Additional Message Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Most_Recent_Queue__c</fullName>
        <description>The queue the case was most recently assigned to.</description>
        <formula>Case__r.Most_Recent_Queue__c</formula>
        <inlineHelpText>Used to determine which queue to send at if the primary ownerId is a userId.</inlineHelpText>
        <label>Case Most Recent Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Email__c</fullName>
        <formula>IF(ISBLANK(Case__r.Owner:Queue.QueueEmail),  Case__r.Owner:User.Email ,Case__r.Owner:Queue.QueueEmail)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Id__c</fullName>
        <description>Displays the related cases owner's Id, prioritizes queue</description>
        <formula>IF(
 ISBLANK( Case__r.Owner:Queue.Id ),
 Case__r.Owner:User.Id,
 Case__r.Owner:Queue.Id
)</formula>
        <label>Case Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Thread_Id__c</fullName>
        <formula>IF(  Case_Number__c = '' ,'', Case__r.Thread_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Portal Emails</relationshipLabel>
        <relationshipName>Portal_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Portal Emails</relationshipLabel>
        <relationshipName>Portal_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_Full_Name__c</fullName>
        <formula>CreatedBy.FirstName &amp; ' ' &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Message_Id__c</fullName>
        <label>Email Message Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Advisor Ad-hoc template</fullName>
                </value>
                <value>
                    <fullName>CISA Mass Email - May 2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <description>The email address that is sending the email.</description>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <formula>CreatedBy.FirstName &amp; ' ' &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Owner_Id__c</fullName>
        <description>Displays the OwnerId to be used in determining the desired from address.</description>
        <formula>IF(
 ISBLANK( Case_Owner_Id__c ),
 Student_Owner_Id__c,
 Case_Owner_Id__c
)</formula>
        <label>Primary Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>MC Subscriber Status: Held/Undeliverable</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>MC Subscriber Status: Bounced/Returned</fullName>
                </value>
                <value>
                    <fullName>Salesforce Email Opt Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Owner_Id__c</fullName>
        <description>Displays the Success_Student__c owner's Id, prioritizes queue</description>
        <formula>IF(
 ISBLANK( Success_Student__r.Owner:Queue.Id ),
 Success_Student__r.Owner:User.Id,
 Success_Student__r.Owner:Queue.Id
)</formula>
        <label>Student Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <defaultValue>"A Message from your College and Department"</defaultValue>
        <description>The subject for the email</description>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Student_Owner_Email__c</fullName>
        <formula>IF(ISBLANK(Success_Student__r.Success_Pod__r.Owner:Queue.QueueEmail),   Success_Student__r.Success_Pod__r.Owner:User.Email, Success_Student__r.Success_Pod__r.Owner:Queue.QueueEmail)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Success Student Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Success Student</label>
        <referenceTo>Success_Student__c</referenceTo>
        <relationshipLabel>Portal Emails</relationshipLabel>
        <relationshipName>Portal_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Object containing all of the information required to send emails from within the portal through the marketing cloud integration.</description>
    <label>Portal Email</label>
    <nameField>
        <displayFormat>PE-{0000000000}</displayFormat>
        <label>Portal Email Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_with_Details</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Email_Template_Name__c</columns>
        <columns>From_Name__c</columns>
        <columns>From_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Details</label>
    </listViews>
    <listViews>
        <fullName>Test_Messages</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>From_Address__c</columns>
        <columns>From_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Owner_Id__c</columns>
        <columns>Contact_First_Name__c</columns>
        <columns>Created_By_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
            <value>Dawn Scott</value>
        </filters>
        <label>Test Messages</label>
    </listViews>
    <recordTypes>
        <fullName>Advisor</fullName>
        <active>true</active>
        <label>Advisor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coach</fullName>
        <active>true</active>
        <label>Coach</label>
    </recordTypes>
</CustomObject>