force-app/main/default/objects/Portal_Email__c/listViews/All_with_Details.listView-meta.xml
<ListView>
    <fullName>All_with_Details</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Email_Template_Name__c</columns>
    <columns>From_Name__c</columns>
    <columns>From_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Details</label>
</ListView>