force-app/main/default/objects/Portal_Email__c/listViews/New_and_Processing.listView-meta.xml
<ListView>
    <fullName>New_and_Processing</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Email_Template_Name__c</columns>
    <columns>From_Name__c</columns>
    <columns>From_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Processing</value>
    </filters>
    <label>New and Processing</label>
</ListView>