force-app/main/default/objects/Portal_Email__c/listViews/Test_Messages.listView-meta.xml
<ListView>
    <fullName>Test_Messages</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>From_Address__c</columns>
    <columns>From_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Case_Owner_Id__c</columns>
    <columns>Contact_First_Name__c</columns>
    <columns>Created_By_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>Dawn Scott</value>
    </filters>
    <label>Test Messages</label>
</ListView>